# p2p-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  main.rs  punch.rs  signal.rs
src/client/: forwarder.rs  mod.rs
src/crypto/: mod.rs  noop.rs
src/host/: demux.rs  mapper.rs  mod.rs
src/protocol/: congestion.rs  mod.rs  packet.rs  stream.rs  window.rs
src/server/: mod.rs  room.rs
tests/: integration_test.rs
